syntax = "proto3";

package user;

import "google/protobuf/empty.proto";

option java_package = "com.proto.parrot.service.user";
option java_multiple_files = true;

message User {
  string id = 1;
  string username = 2;
  string birthday = 3;
  string parrot = 4;
  uint64 likes = 5;
  uint64 bookmarks = 6;
}

message ProfileResponse {
  User user = 1;
}

service UserService {
  rpc Profile(google.protobuf.Empty) returns (stream ProfileResponse) {};
}